@@ -36,6 +36,7 @@ typedef enum {
 
   SET_MUTEX_BACKEND,
   SET_MUTEX_CACHE,
+  SET_MUTEX_CRONTAB,
   SET_MUTEX_PERMISSION,
   SET_MUTEX_DIRINFO,
   SET_MUTEX_FILE_T,
